[tool.poetry]
name = "stemplow"
version = "1.3.0"
description = "RoboFont Tool for measuring the thickness of the stem."
authors = ["Rafał Buchner <rafal.buchner@gmail.com>"]
license = "The MIT License: https://github.com/RafalBuchner/StemPlow?tab=MIT-1-ov-file#readme"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fonttools = "^4.54.1"
fontparts = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
