[tool.poetry]
name = "stemplow"
version = "1.4.6"
description = "RoboFont Tool for measuring the thickness of the stem."
authors = ["Rafał Buchner <rafal.buchner@gmail.com>"]
license = "The MIT License: https://github.com/RafalBuchner/StemPlow?tab=MIT-1-ov-file#readme"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fonttools = "^4.54.1"
fontparts = "^0.12.2"
icecream = "^2.1.3"

roboFontExtensionBundle = { git = "https://github.com/typemytype/roboFontExtensionBundle.git", branch = "main" }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
