[project]
name = "stemplow"
version = "1.5.3"
description = "RoboFont Tool for measuring the thickness of the stem."
authors = [{ name = "Rafał Buchner", email = "rafal.buchner@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.54.1",
    "fontparts>=0.12.2",
    "icecream>=2.1.3",
    "gitpython>=3.1.43",
    "roboFontExtensionBundle",
    "shapely",
]

[tool.uv.sources]
roboFontExtensionBundle = { git = "https://github.com/typemytype/roboFontExtensionBundle.git", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["source/code/stemPlow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
